--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="wrapper">
+  <main class="wrapper">
     <div class="container">
       <div class="qr-code">
         <img src="./images/image-qr-code.png" alt="QR code">
@@ -25,7 +25,7 @@
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
